Add sse for events
